# brevis-vera

./: Cargo.toml  README.md
openspec/changes/implement-brevis-vera/: design.md  proposal.md  tasks.md
openspec/changes/implement-brevis-vera/specs/demo-ui/: spec.md
openspec/changes/implement-brevis-vera/specs/image-editing/: spec.md
openspec/changes/implement-brevis-vera/specs/provenance-verification/: spec.md
openspec/changes/implement-brevis-vera/specs/zk-proof-generation/: spec.md
openspec/changes/integrate-pico-zkvm/: design.md  proposal.md  tasks.md
openspec/changes/integrate-pico-zkvm/specs/zk-proof-generation/: spec.md
openspec/changes/integrate-pico-zkvm/specs/zk-proof-verification/: spec.md
veramain/: Cargo.toml
veramain/src/: api.rs  main.rs
veramain/src/image_editing/: mod.rs
veramain/src/provenance/: mod.rs
veramain/src/ui/: index.html
zkapp/: Cargo.toml
zkapp/elf/: riscv32im-pico-zkvm-elf
zkapp/src/: main.rs  types.rs
