[workspace]
members = [
  "veramain",
  "zkapp",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
base64 = "0.22" # Base64 encoding for verification keys
bincode = "1.3" # Binary serialization for ZKVM communication
c2pa = {version = "0.76", features = ["file_io"]}# C2PA Rust SDK       
clap = {version = "4.5", features = ["derive"]}# CLI argument parsing       
image = "0.25" # Image processing
pico-sdk = {git = "https://github.com/brevis-network/pico"} 
serde = {version = "1.0", features = ["derive"]}# Serialization       
serde_json = "1.0" # JSON handling
sha2 = "0.10" # SHA256 hashing for proof inputs

zkapp = {path = "zkapp"}
