[package]
edition.workspace = true
name = "veramain"
version.workspace = true

[dependencies]
base64.workspace = true
bincode.workspace = true
c2pa.workspace = true
clap.workspace = true
image.workspace = true
pico-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zkapp.workspace = true

[dev-dependencies]
tempfile = "3.10" # For test file handling
