[package]
edition.workspace = true
name = "veramain"
version.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
bincode.workspace = true
c2pa.workspace = true
clap.workspace = true
image.workspace = true
pico-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
zkapp.workspace = true

[dev-dependencies]
tempfile = "3.10" # For test file handling
