[package]
edition.workspace = true
name = "zkapp"
version.workspace = true

[dependencies]
ed25519-dalek = "2.2.0"
pico-sdk.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
tiny-keccak = {git = "https://github.com/brevis-network/tiny-keccak", branch = "patch-v1.0.0", features = ["keccak"]}
